--- a/ZMS/trunk/README
+++ b/ZMS/trunk/README
@@ -43,7 +43,7 @@ Changelog
 3.2.0dev (unreleased)
 *********************
 
-    * `latest changes... <https://zmslabs.org/trac/log/ZMS/trunk?action=stop_on_copy&mode=stop_on_copy&stop_rev=XXXX&limit=200>`_
+    * `latest changes... <https://zmslabs.org/trac/log/ZMS/trunk?action=stop_on_copy&mode=stop_on_copy&stop_rev=3015&limit=200>`_
 
 3.1.2 (2015-02-25)
 ******************
@@ -54,7 +54,7 @@ Changelog
     * Updated Framework package versions
     * Improved ZMSSqlDb
     * Removed ZMS2 artefacts
-    * `latest changes... <https://zmslabs.org/trac/log/ZMS/trunk?action=stop_on_copy&mode=stop_on_copy&rev=XXXX&stop_rev=2886&limit=200>`_
+    * `more in 3.1.2... <https://zmslabs.org/trac/log/ZMS/trunk?action=stop_on_copy&mode=stop_on_copy&rev=3014&stop_rev=2886&limit=200>`_
 
 3.1.1 (2015-01-24)
 ******************
